Add preliminary work for ChunSnesFormat

--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -221,6 +221,8 @@
     <ClCompile Include="formats\CapcomSnesInstr.cpp" />
     <ClCompile Include="formats\CapcomSnesScanner.cpp" />
     <ClCompile Include="formats\CapcomSnesSeq.cpp" />
+    <ClCompile Include="formats\ChunSnesScanner.cpp" />
+    <ClCompile Include="formats\ChunSnesSeq.cpp" />
     <ClCompile Include="formats\CompileSnesInstr.cpp" />
     <ClCompile Include="formats\CompileSnesScanner.cpp" />
     <ClCompile Include="formats\CompileSnesSeq.cpp" />
@@ -383,6 +385,9 @@
     <ClInclude Include="formats\CapcomSnesInstr.h" />
     <ClInclude Include="formats\CapcomSnesScanner.h" />
     <ClInclude Include="formats\CapcomSnesSeq.h" />
+    <ClInclude Include="formats\ChunSnesFormat.h" />
+    <ClInclude Include="formats\ChunSnesScanner.h" />
+    <ClInclude Include="formats\ChunSnesSeq.h" />
     <ClInclude Include="formats\CompileSnesFormat.h" />
     <ClInclude Include="formats\CompileSnesInstr.h" />
     <ClInclude Include="formats\CompileSnesScanner.h" />
