--- a/src/VGMTrans.vcxproj.filters
+++ b/src/VGMTrans.vcxproj.filters
@@ -672,6 +672,9 @@
     <ClCompile Include="main\formats\MintSnesInstr.cpp">
       <Filter>Source Files\formats\mintsnes</Filter>
     </ClCompile>
+    <ClCompile Include="main\formats\ChunSnesInstr.cpp">
+      <Filter>Source Files\formats\chunsnes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ui\windows\aboutdlg.h">
@@ -1219,6 +1222,9 @@
     </ClInclude>
     <ClInclude Include="main\formats\MintSnesInstr.h">
       <Filter>Header Files\formats\mintsnes</Filter>
+    </ClInclude>
+    <ClInclude Include="main\formats\ChunSnesInstr.h">
+      <Filter>Header Files\formats\chunsnes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
