--- a/src/VGMTrans.vcxproj.filters
+++ b/src/VGMTrans.vcxproj.filters
@@ -202,6 +202,12 @@
     <Filter Include="Source Files\formats\chunsnes">
       <UniqueIdentifier>{e147eed3-4cce-4b72-af5b-3a697dd34dd7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\formats\heartbeatsnes">
+      <UniqueIdentifier>{6794a5c8-d692-4ae4-9d39-84960bb21e6e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\formats\heartbeatsnes">
+      <UniqueIdentifier>{ff06dcd1-ce29-44fe-ac10-d1c0ef1eabcc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ui\windows\aboutdlg.cpp">
@@ -674,6 +680,12 @@
     </ClCompile>
     <ClCompile Include="main\formats\ChunSnesInstr.cpp">
       <Filter>Source Files\formats\chunsnes</Filter>
+    </ClCompile>
+    <ClCompile Include="main\formats\HeartBeatSnesSeq.cpp">
+      <Filter>Source Files\formats\heartbeatsnes</Filter>
+    </ClCompile>
+    <ClCompile Include="main\formats\HeartBeatSnesScanner.cpp">
+      <Filter>Source Files\formats\heartbeatsnes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1225,6 +1237,15 @@
     </ClInclude>
     <ClInclude Include="main\formats\ChunSnesInstr.h">
       <Filter>Header Files\formats\chunsnes</Filter>
+    </ClInclude>
+    <ClInclude Include="main\formats\HeartBeatSnesFormat.h">
+      <Filter>Header Files\formats\heartbeatsnes</Filter>
+    </ClInclude>
+    <ClInclude Include="main\formats\HeartBeatSnesScanner.h">
+      <Filter>Header Files\formats\heartbeatsnes</Filter>
+    </ClInclude>
+    <ClInclude Include="main\formats\HeartBeatSnesSeq.h">
+      <Filter>Header Files\formats\heartbeatsnes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
