Add PandoraBoxSnesSeq stub

--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -247,6 +247,8 @@
     <ClCompile Include="main\formats\NamcoSnesScanner.cpp" />
     <ClCompile Include="main\formats\NamcoSnesSeq.cpp" />
     <ClCompile Include="main\formats\NinSnesInstr.cpp" />
+    <ClCompile Include="main\formats\PandoraBoxSnesScanner.cpp" />
+    <ClCompile Include="main\formats\PandoraBoxSnesSeq.cpp" />
     <ClCompile Include="main\formats\RareSnesInstr.cpp" />
     <ClCompile Include="main\formats\SNESDSP.cpp" />
     <ClCompile Include="main\formats\SuzukiSnesInstr.cpp" />
@@ -428,6 +430,9 @@
     <ClInclude Include="main\formats\NamcoSnesScanner.h" />
     <ClInclude Include="main\formats\NamcoSnesSeq.h" />
     <ClInclude Include="main\formats\NinSnesInstr.h" />
+    <ClInclude Include="main\formats\PandoraBoxSnesFormat.h" />
+    <ClInclude Include="main\formats\PandoraBoxSnesScanner.h" />
+    <ClInclude Include="main\formats\PandoraBoxSnesSeq.h" />
     <ClInclude Include="main\formats\RareSnesInstr.h" />
     <ClInclude Include="main\formats\SNESDSP.h" />
     <ClInclude Include="main\formats\SuzukiSnesInstr.h" />
