--- a/src/VGMTrans.vcxproj.filters
+++ b/src/VGMTrans.vcxproj.filters
@@ -184,12 +184,6 @@
     <Filter Include="Header Files\formats\hudsonsnes">
       <UniqueIdentifier>{2204cdc0-76e7-4a98-925f-0a0903031fa5}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\formats\mintsnes">
-      <UniqueIdentifier>{9e29b9f5-21eb-4942-8695-d4706e3cd2a9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\formats\mintsnes">
-      <UniqueIdentifier>{fcb61a35-8942-4644-8123-2bbbb267fc04}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\formats\chunsnes">
       <UniqueIdentifier>{bfc3e9ee-51d8-4b4f-9e63-40a2576fcd56}</UniqueIdentifier>
     </Filter>
@@ -225,6 +219,12 @@
     </Filter>
     <Filter Include="Source Files\formats\softcreatsnes">
       <UniqueIdentifier>{d7a56e05-c539-4af1-85df-444d83e61b49}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\formats\morisnes">
+      <UniqueIdentifier>{9e29b9f5-21eb-4942-8695-d4706e3cd2a9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\formats\morisnes">
+      <UniqueIdentifier>{fcb61a35-8942-4644-8123-2bbbb267fc04}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -666,20 +666,11 @@
     <ClCompile Include="main\formats\HudsonSnesInstr.cpp">
       <Filter>Source Files\formats\hudsonsnes</Filter>
     </ClCompile>
-    <ClCompile Include="main\formats\MintSnesScanner.cpp">
-      <Filter>Source Files\formats\mintsnes</Filter>
-    </ClCompile>
-    <ClCompile Include="main\formats\MintSnesSeq.cpp">
-      <Filter>Source Files\formats\mintsnes</Filter>
-    </ClCompile>
     <ClCompile Include="main\formats\ChunSnesScanner.cpp">
       <Filter>Source Files\formats\chunsnes</Filter>
     </ClCompile>
     <ClCompile Include="main\formats\ChunSnesSeq.cpp">
       <Filter>Source Files\formats\chunsnes</Filter>
-    </ClCompile>
-    <ClCompile Include="main\formats\MintSnesInstr.cpp">
-      <Filter>Source Files\formats\mintsnes</Filter>
     </ClCompile>
     <ClCompile Include="main\formats\ChunSnesInstr.cpp">
       <Filter>Source Files\formats\chunsnes</Filter>
@@ -734,6 +725,15 @@
     </ClCompile>
     <ClCompile Include="main\formats\PandoraBoxSnesInstr.cpp">
       <Filter>Source Files\formats\pandoraboxsnes</Filter>
+    </ClCompile>
+    <ClCompile Include="main\formats\MoriSnesInstr.cpp">
+      <Filter>Source Files\formats\morisnes</Filter>
+    </ClCompile>
+    <ClCompile Include="main\formats\MoriSnesScanner.cpp">
+      <Filter>Source Files\formats\morisnes</Filter>
+    </ClCompile>
+    <ClCompile Include="main\formats\MoriSnesSeq.cpp">
+      <Filter>Source Files\formats\morisnes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1244,15 +1244,6 @@
     <ClInclude Include="main\formats\HudsonSnesInstr.h">
       <Filter>Header Files\formats\hudsonsnes</Filter>
     </ClInclude>
-    <ClInclude Include="main\formats\MintSnesFormat.h">
-      <Filter>Header Files\formats\mintsnes</Filter>
-    </ClInclude>
-    <ClInclude Include="main\formats\MintSnesScanner.h">
-      <Filter>Header Files\formats\mintsnes</Filter>
-    </ClInclude>
-    <ClInclude Include="main\formats\MintSnesSeq.h">
-      <Filter>Header Files\formats\mintsnes</Filter>
-    </ClInclude>
     <ClInclude Include="main\formats\ChunSnesFormat.h">
       <Filter>Header Files\formats\chunsnes</Filter>
     </ClInclude>
@@ -1261,9 +1252,6 @@
     </ClInclude>
     <ClInclude Include="main\formats\ChunSnesSeq.h">
       <Filter>Header Files\formats\chunsnes</Filter>
-    </ClInclude>
-    <ClInclude Include="main\formats\MintSnesInstr.h">
-      <Filter>Header Files\formats\mintsnes</Filter>
     </ClInclude>
     <ClInclude Include="main\formats\ChunSnesInstr.h">
       <Filter>Header Files\formats\chunsnes</Filter>
@@ -1333,6 +1321,18 @@
     </ClInclude>
     <ClInclude Include="main\formats\PandoraBoxSnesInstr.h">
       <Filter>Header Files\formats\pandoraboxsnes</Filter>
+    </ClInclude>
+    <ClInclude Include="main\formats\MoriSnesFormat.h">
+      <Filter>Header Files\formats\morisnes</Filter>
+    </ClInclude>
+    <ClInclude Include="main\formats\MoriSnesInstr.h">
+      <Filter>Header Files\formats\morisnes</Filter>
+    </ClInclude>
+    <ClInclude Include="main\formats\MoriSnesScanner.h">
+      <Filter>Header Files\formats\morisnes</Filter>
+    </ClInclude>
+    <ClInclude Include="main\formats\MoriSnesSeq.h">
+      <Filter>Header Files\formats\morisnes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
