--- a/src/VGMTrans.vcxproj.filters
+++ b/src/VGMTrans.vcxproj.filters
@@ -226,6 +226,12 @@
     <Filter Include="Source Files\formats\morisnes">
       <UniqueIdentifier>{fcb61a35-8942-4644-8123-2bbbb267fc04}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\formats\neverlandsnes">
+      <UniqueIdentifier>{696456e7-c1ec-412a-9b31-4c063313fd8d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\formats\neverlandsnes">
+      <UniqueIdentifier>{d5d93f14-1b60-404d-8cbe-9ad1dbdd0fe6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ui\windows\aboutdlg.cpp">
@@ -734,6 +740,12 @@
     </ClCompile>
     <ClCompile Include="main\formats\MoriSnesSeq.cpp">
       <Filter>Source Files\formats\morisnes</Filter>
+    </ClCompile>
+    <ClCompile Include="main\formats\NeverlandSnesScanner.cpp">
+      <Filter>Source Files\formats\neverlandsnes</Filter>
+    </ClCompile>
+    <ClCompile Include="main\formats\NeverlandSnesSeq.cpp">
+      <Filter>Source Files\formats\neverlandsnes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1333,6 +1345,15 @@
     </ClInclude>
     <ClInclude Include="main\formats\MoriSnesSeq.h">
       <Filter>Header Files\formats\morisnes</Filter>
+    </ClInclude>
+    <ClInclude Include="main\formats\NeverlandSnesFormat.h">
+      <Filter>Header Files\formats\neverlandsnes</Filter>
+    </ClInclude>
+    <ClInclude Include="main\formats\NeverlandSnesScanner.h">
+      <Filter>Header Files\formats\neverlandsnes</Filter>
+    </ClInclude>
+    <ClInclude Include="main\formats\NeverlandSnesSeq.h">
+      <Filter>Header Files\formats\neverlandsnes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
